# Best-itinerary-Bordeaux-Metropole

./: .dockerignore  .env  .gitignore  .prettierrc  BIBM.drawio  Dockerfile  README.md  compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request-or-idea.md
.github/workflows/: docker.yml  node.js.yml  rust.yml
Client/: .env  .eslintrc.cjs  .eslintrc.js  README.md  capacitor.config.json  eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
Client/public/: index.html
Client/src/: App.vue  index.css  main.js  main.ts
Common/: .gitignore  eslint.config.mjs  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json
Common/src/: async.ts  benchmark.ts  cache.ts  colors.ts  filters.ts  geographics.ts  logger.ts  map.ts  opti.ts  string.ts  time.ts  types.ts  workers.ts
Compute/: .gitignore  config.json  package.json  tsconfig.json
Compute/src/: agendaCustom.d.ts  base.ts  main.ts  prepare.ts  tsconfig.json  worker.ts
Data/: .eslintrc.cjs  .gitignore  eslint.config.mjs  package.json  tsconfig.json
Data/config/: custom-environment-variables.json  default.json
Itinerary/: .gitignore  Cargo.toml
Itinerary/src/: lib.rs
Itinerary/src/Raptor/: RaptorAlgorithm.rs  RaptorScanner.rs  RouteScanner.rs  RouteStructs.rs  mod.rs
Itinerary/src/WasmRaptor/: RaptorAlgorithm.rs  RaptorScanner.rs  RouteStructs.rs  mod.rs
Server/: .eslintrc.json  .gitignore  .npmignore  API.md  README.md  STRUCTURE.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.esm.json  tsconfig.json
(+227 files in other folders)
