[package]
name = "itinerary"
version = "0.1.0"
edition = "2021"
authors = ["{{GhostOcter}}"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["tokio-runtime"]

[dependencies]
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.29"
serde = "1.0"
futures = "0.3.21"
