[package]
name = "itinerary"
version = "0.1.0"
edition = "2021"
authors = ["{{GhostOcter}}"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies.mongodb]
version = "2.*"
default-features = false
features = ["tokio-runtime", "bson-chrono-0_4"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
lazy_static = "1.4"
getrandom = {version = "0.2", features = ["js"]}
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4.*", features = ["serde", "wasmbind"] }
tokio = { version = "1.*", features = ["rt", "sync", "time"]}
serde_json = "1.*"
thiserror = "1.*"
futures = "0.3.*"
